--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@
      height: 242.56px;
      width: 241.47px;
      display: inline-block;
+     vertical-align: middle;
 
  }
  .bottom-h2{
@@ -122,9 +123,23 @@
      font-family: "Raleway";
      font-weight: 500;
  }
- .image-div{
+ .bottom-div{
      display: inline-block;
-     width: 268.97px;
-     margin-left: 300px;
+     margin-left: 59.1px;
+     width: 269.07px ;
+     vertical-align: middle;
 
  }
+ .bottom-box {
+    font-family: "Raleway";
+    font-weight: 100;
+    color: #8D8D8D;
+    font-size: 16;
+    margin-top: 52.2px;
+
+ }
+.bottom-section{
+    display: inline-block;
+    margin-left: 245px;
+}
+
