--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@
      width: 241.47px;
      display: inline-block;
      vertical-align: middle;
+    
 
  }
  .bottom-h2{
@@ -147,4 +148,25 @@
     margin-left: 245px;
     margin-top: 25px;
 }
+/*car move starts*/
+.car-img {
+	width: 300px;
+	animation: carmove 5s infinite 2s alternate;
+/*	animation-name: carmove;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
+	animation-delay: 2s;
+	animation-direction: alternate;*/
+	position: absolute;
+}
+.car-block {
+	position: relative;
+}
+
+/*keyframes animation*/
+@keyframes carmove {
+	from{left: 0}
+	to {left: 1000px}
+}
+
 
